# gate

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/gate/: cli.py  config.py  output.py  sbom.py
src/gate/checks/: cve.py  integrity.py  maintainer.py  quarantine.py  scripts.py
src/gate/hooks/: precommit.py
src/gate/registry/: npm.py  pypi.py
tests/: test_config.py  test_cve.py  test_hooks.py  test_integrity.py  test_lockfile_parsers.py  test_maintainer.py  test_quarantine.py  test_registry_npm.py  test_registry_pypi.py  test_sbom.py  test_scripts.py
