[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gate-cli"
version = "0.1.0"
description = "Supply chain security scanner for npm and pip packages"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["security", "supply-chain", "npm", "pip", "cve", "sbom"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/Mhacker1020/gate"
Repository = "https://github.com/Mhacker1020/gate"
Issues = "https://github.com/Mhacker1020/gate/issues"
Blog = "https://hivesecurity.gitlab.io"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[project.scripts]
gate = "gate.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gate"]
